welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:2: error: reassignment to val
  if (talking=true && hour<7) {
             ^